# p1-supercomp

./: .gitignore  CMakeLists.txt  a.out  backtrack.cpp  o  teste  teste.cu
src/branchnbound/: branchnbound.cpp  kapiroto.cpp  novo-bb.cpp
src/local/: local-fix.cpp  local-para copy.cpp  local-para.cpp  local-thrust.cu  local.cpp
src/sequential/: sequencial-para.cpp  sequencial.cpp
tools/: cria_entrada.py
